firstapp.html, line 12 fix container overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,8 +19,6 @@ body {
 
 .container-wrapper--gold {
     background-color: #c58a00;
-    color: ;
-
 }
 
 .callout-container {
@@ -166,3 +164,8 @@ img, svg {
     border-radius: 50% !important;
 } */
 
+@media (min-width: 992px) {
+    .container, .container-lg, .container-md, .container-sm {
+        max-width: 960px;
+    }
+}
